--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -48,18 +48,19 @@ h2 {
 }
 
 h4 {
-  font-size: 36px;
+  font-size: 30px;
 }
 
 
 .btn-branding {
   padding: 12px 22px;
-  border-radius: 4px;
+  border-radius: 10px;
   background: #fff;
   text-decoration: none;
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
   text-transform: capitalize;
+  margin-bottom: 100px;
 }
 
 .btn-branding:hover {
@@ -82,43 +83,92 @@ h4 {
   color: rgb(62, 62, 62);
 }
 
-.project-image {
-  max-width: 520px;
-  margin: auto;
-  justify-content: center;
-  align-items: center;
-  max-height: 340px;
-  background: #fff;
- 
 
-}
-
-.row {
-padding: 10px;
-}
-
-.image-block {
-  background: var(--background-color);
-  border-radius: 4px;
-  height: 400px;
-  max-width: 600px;
-  
-
-}
 
 .project-paragraph {
   line-height: 1.75;
-  font-size: 18px;
+  font-size: 16px;
   color: rgba(62, 62, 62, 0.855);
  
 }
 
-.project-text {
-  max-width: 600px;
-  margin: auto;
-}
+
 
 .project-links {
-  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+
+  
 }
+
+
+
+.project-image {
+  max-width: 99%;
+  height: auto;
+  background: var(--background-color);
+  padding: 60px 10px 40px 10px;
+  border-radius: 30px;
+}
+
+.project-heading {
+  
+  position: relative;
+  top: 55px;
+}
+
+@media (max-width: 1000px) {
+  h4 {
+    font-size: 30px;
+  }
+
+  .git-link {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 700px) {
+  h1 {
+    font-size: 55px;
+    line-height: 1.25;
+  }
+  h2 {
+    font-size: 20px;
+  }
+}
+ @media (max-width: 420px) {
+ h1 {
+  font-size: 48px;
+  line-height: 1.25;
+ }
+
+ h2 {
+  font-size: 18px;
+  padding: 15px;
+  line-height: 1.25;
+ }
+  h4 {
+    font-size: 25px;
+  }
+}
+
+@media (max-width: 320px) {
+  .project-links {
+  display: inline;
+ }
+  .site-link, .git-link {
+    display: block;
+  }
+ .git-link {
+  position: relative;
+  top: 30px;
+  margin-bottom: 40px
+ }
+}
+
+ 
+
+
+
+
 
