--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -2,9 +2,9 @@
 
 :root {
   --primary-color: #0d1770b0;
-  --secondary-color:  #6a7baf; 
+  --secondary-color: #6a7baf;
   --background-color: #938cae31;
-  --font-heading:  'Noto Serif Georgian', serif;
+  --font-heading: 'Noto Serif Georgian', serif;
   --font-default: 'Farro', sans-serif;
 }
 
@@ -18,9 +18,9 @@ body {
 .intro {
   padding-top: 230px;
   padding-bottom: 120px;
-  background: var(--background-color); 
+  background: var(--background-color);
   margin-bottom: 120px;
- 
+
 }
 
 h1 {
@@ -35,12 +35,14 @@ h2 {
   font-weight: 400;
   font-family: var(--font-default);
   color: rgb(62, 62, 62, 0.855);
-  
+
 }
 
-.featured, h4, h1 {
+.featured,
+h4,
+h1 {
   font-family: var(--font-heading);
-  
+
 }
 
 .featured {
@@ -55,20 +57,34 @@ h4 {
 .btn-branding {
   padding: 12px 22px;
   border-radius: 10px;
-  background: #fff;
+  background: var(--primary-color);
   text-decoration: none;
-  color: var(--primary-color);
-  border: 2px solid var(--primary-color);
+  color: #fff;
+  border: 1px solid var(--primary-color);
   text-transform: capitalize;
   margin-bottom: 100px;
 }
 
 .btn-branding:hover {
-  background: var(--primary-color);
-  color: #fff;
+  background: #fff;
+  color: var(--primary-color);
   transition: all 200ms ease-in-out;
 
 }
+
+.links-in-paragraph {
+  color: var(--primary-color);
+  text-decoration: none;
+  font-weight: 500;
+
+}
+
+.links-in-paragraph:hover {
+  text-decoration: underline;
+  color: var(--primary-color);
+  font-weight: 600;
+}
+
 
 .down-icon {
   color: var(--primary-color);
@@ -84,27 +100,52 @@ h4 {
 }
 
 
-
 .project-paragraph {
   line-height: 2;
   font-size: 18px;
   color: rgba(62, 62, 62, 0.855);
   text-align: center;
-  
- 
+
 }
 
+.h1-supplement-page {
+  font-size: 45px;
+}
+
+.about-kendra-img {
+  max-width: 100%;
+  display: inline;
+  margin: 0 auto;
+}
+
+.main-row-about {
+  align-items: center;
+}
+
+
+.section-paragraphs {
+  line-height: 2;
+  font-size: 18px;
+  color: rgba(62, 62, 62, 0.855);
+  text-align: left;
+  padding: 20px;
+
+}
+
+.about-intro {
+  color: #000;
+
+}
 
 
 .project-links {
   display: flex;
   justify-content: space-evenly;
 
-  
+
 }
 
 .dark-text {
-
   color: var(--primary-color);
   font-size: 18px;
 }
@@ -131,6 +172,10 @@ h4 {
   .git-link {
     margin-bottom: 40px;
   }
+
+  .h1-supplement-page {
+    font-size: 40px;
+  }
 }
 
 @media (max-width: 700px) {
@@ -138,43 +183,52 @@ h4 {
     font-size: 55px;
     line-height: 1.25;
   }
+
+
   h2 {
     font-size: 20px;
   }
-}
- @media (max-width: 420px) {
- h1 {
-  font-size: 48px;
-  line-height: 1.25;
- }
 
- h2 {
-  font-size: 18px;
-  padding: 15px;
-  line-height: 1.25;
- }
+  .about-intro {
+    padding-bottom: 0;
+
+  }
+}
+
+@media (max-width: 420px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.25;
+  }
+
+  h2 {
+    font-size: 18px;
+    padding: 15px;
+    line-height: 1.25;
+  }
+
   h4 {
     font-size: 25px;
+  }
+
+  .h1-supplement-page {
+    font-size: 32px;
   }
 }
 
 @media (max-width: 320px) {
   .project-links {
-  display: inline;
- }
-  .site-link, .git-link {
+    display: inline;
+  }
+
+  .site-link,
+  .git-link {
     display: block;
   }
- .git-link {
-  position: relative;
-  top: 30px;
-  margin-bottom: 40px
- }
+
+  .git-link {
+    position: relative;
+    top: 30px;
+    margin-bottom: 40px
+  }
 }
-
- 
-
-
-
-
-
