--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -141,7 +141,11 @@ h4 {
 .project-links {
   display: flex;
   justify-content: space-evenly;
+}
 
+
+.work-heading {
+  margin-top: 100px;
 
 }
 
@@ -189,6 +193,7 @@ h4 {
     font-size: 20px;
   }
 
+
   .about-intro {
     padding-bottom: 0;
 
@@ -205,6 +210,10 @@ h4 {
     font-size: 18px;
     padding: 15px;
     line-height: 1.25;
+  }
+
+  .featured {
+    font-size: 35px;
   }
 
   h4 {
