--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -85,6 +85,9 @@ h4 {
   font-weight: 600;
 }
 
+.contact-link {
+  font-size: 20px;
+}
 
 .down-icon {
   color: var(--primary-color);
@@ -144,7 +147,7 @@ h4 {
 }
 
 
-.work-heading {
+.sup-heading {
   margin-top: 100px;
 
 }
