--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -16,11 +16,15 @@ body {
 }
 
 .intro {
-  padding-top: 230px;
-  padding-bottom: 120px;
+  padding-top: 260px;
+  padding-bottom: 150px;
   background: var(--background-color);
-  margin-bottom: 120px;
+  margin-bottom: 150px;
 
+}
+
+.body-pages {
+  margin-top: 100px;
 }
 
 h1 {
@@ -53,6 +57,25 @@ h4 {
   font-size: 30px;
 }
 
+.navbar-brand {
+  font-family: var(--font-default);
+}
+
+.navbar {
+  background: #fff ;
+  box-shadow: 0 4px 6px -6px var(--secondary-color);
+}
+
+.nav-link {
+  text-transform: uppercase;
+  
+}
+
+.active {
+  color: var(--primary-color) !important;
+  font-weight: 600;
+  font-size: 110%;
+}
 
 .btn-branding {
   padding: 12px 22px;
@@ -111,7 +134,6 @@ h4 {
 
 }
 
-
 .h1-supplement-page {
   font-size: 45px;
 }
@@ -136,9 +158,9 @@ h4 {
 
 }
 
+
 .about-intro {
   color: #000;
-
 }
 
 
@@ -149,7 +171,7 @@ h4 {
 
 
 .sup-heading {
-  margin-top: 100px;
+  margin-top: 150px;
 
 }
 
