--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -4,8 +4,8 @@
   --primary-color: #0d1770b0;
   --secondary-color: #6a7baf;
   --background-color: #938cae31;
-  --font-heading: 'Noto Serif Georgian', serif;
-  --font-default: 'Farro', sans-serif;
+  --font-heading: 'Farro',sans-serif;
+  --font-default: 'Noto Serif Georgian',serif;
 }
 
 
@@ -39,7 +39,7 @@ body {
 h1 {
   font-size: 80px;
   font-weight: 500;
-  line-height: 1.5;
+  line-height: 1.2;
 
 }
 
@@ -67,7 +67,7 @@ h4 {
 }
 
 .navbar-brand {
-  font-family: var(--font-default);
+  font-family: var(--font-heading);
 }
 
 .navbar {
@@ -77,6 +77,7 @@ h4 {
 
 .nav-link {
   text-transform: uppercase;
+  font-family: var(--font-heading);
 
 }
 
@@ -94,6 +95,7 @@ h4 {
 }
 
 .btn-branding {
+  font-family: var(--font-heading);
   padding: 12px 22px;
   border-radius: 10px;
   background: var(--primary-color);
@@ -112,6 +114,7 @@ h4 {
 }
 
 .btn-branding-alt {
+  font-family: var(--font-heading);
   padding: 12px 22px;
   border-radius: 10px;
   background: #fff;
@@ -339,11 +342,9 @@ footer p {
     line-height: 1.25;
   }
 
-
   h2 {
     font-size: 20px;
   }
-
 
   .about-intro {
     padding-bottom: 0;
@@ -364,19 +365,18 @@ footer p {
 @media (max-width: 500px) {
   h1 {
     font-size: 48px;
-    line-height: 1.25;
+    line-height: 1;
   }
 
   h2 {
     font-size: 18px;
     padding: 15px;
-    line-height: 1.25;
+    line-height: 1;
   }
 
   .featured {
     font-size: 35px;
   }
-
 
   .h1-supplement-page {
     font-size: 32px;
@@ -387,7 +387,7 @@ footer p {
   }
 
   .project-heading {
-    top: 40px;
+    top: 55px;
     font-size: 25px;
   }
 
@@ -396,8 +396,6 @@ footer p {
     margin: auto;
     text-align: center;
   }
-
-
 
   .git-link {
     position: relative;
