--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -4,8 +4,8 @@
   --primary-color: #0d1770b0;
   --secondary-color: #6a7baf;
   --background-color: #938cae31;
-  --font-heading: 'Farro',sans-serif;
-  --font-default: 'Noto Serif Georgian',serif;
+  --font-heading: 'Farro', sans-serif;
+  --font-default: 'Noto Serif Georgian', serif;
 }
 
 
@@ -39,15 +39,16 @@ body {
 h1 {
   font-size: 80px;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.3;
 
 }
 
 h2 {
-  font-size: 22px;
+  font-size: 25px;
   font-weight: 400;
   font-family: var(--font-default);
   color: rgb(62, 62, 62, 0.855);
+ 
 
 }
 
@@ -84,6 +85,7 @@ h4 {
 .img-wrapper {
   margin-top: -150px;
 }
+
 .page-bottom {
   margin-bottom: 150px !important;
 }
@@ -227,19 +229,20 @@ footer {
   background: var(--background-color);
   padding-top: 50px;
 }
+
 .social-links {
   padding-bottom: 30px;
   display: flex;
   justify-content: center;
-    
-  
+
+
 }
 
 footer ul {
-padding: 0;
-margin: 0;
-text-decoration: none;
-align-items: center;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  align-items: center;
 
 }
 
@@ -254,7 +257,7 @@ footer li {
   width: 65px !important;
 }
 
- .social-links a {
+.social-links a {
   padding: 3px 12px;
   font-size: 40px;
   align-items: center;
@@ -267,7 +270,7 @@ footer li {
   transition: all 150ms ease-in-out;
 }
 
-.social-links a:hover{
+.social-links a:hover {
   color: #fff;
   background: var(--primary-color);
 }
@@ -321,6 +324,10 @@ footer p {
 
 @media (max-width: 1197px) {
 
+  .intro h2 {
+margin-right: 40px;
+margin-left: 40px;
+  }
 
   .git-link {
     margin-bottom: 40px;
@@ -333,6 +340,7 @@ footer p {
   .project-links {
     margin-top: 50px !important;
   }
+
 
 }
 
@@ -350,32 +358,25 @@ footer p {
     padding-bottom: 0;
   }
 
-  .work-project-headings {
-    margin-top: 10px !important;
-    margin-bottom: 0 !important;
-    font-size: 28px;
-  }
-
   .main-row-about {
     margin-top: -30px !important;
   }
+
 
 }
 
 @media (max-width: 500px) {
   h1 {
     font-size: 48px;
-    line-height: 1;
+    line-height: 1.2;
   }
 
   h2 {
-    font-size: 18px;
-    padding: 15px;
-    line-height: 1;
+    line-height: 1.3;
   }
 
   .featured {
-    font-size: 35px;
+    font-size: 32px;
   }
 
   .h1-supplement-page {
@@ -391,6 +392,7 @@ footer p {
     font-size: 25px;
   }
 
+
   .project-links {
     display: block;
     margin: auto;
@@ -401,7 +403,11 @@ footer p {
     position: relative;
     top: 30px;
 
+  }
 
+  footer p {
+    margin-top: 30px;
+    padding: 10px 20px 15px 20px;
   }
 
 }
