--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -2,7 +2,8 @@
 
 :root {
   --primary-color: #0d1770b0;
-  --secondary-color: #6a7baf;
+  --secondary-color: #303944;
+  --paragraph-color: rgba(62, 62, 62, 0.8);
   --background-color: #938cae31;
   --font-heading: 'Farro', sans-serif;
   --font-default: 'Noto Serif Georgian', serif;
@@ -32,7 +33,7 @@ body {
 
 .work-project-headings {
   font-family: var(--font-heading);
-  color: #000;
+  color: var(--secondary-color);
   font-size: 28px;
   margin-top: 2em;
 }
@@ -45,6 +46,7 @@ h1 {
   font-size: 80px;
   font-weight: 500;
   line-height: 1.3;
+  color: var(--secondary-color);
 
 }
 
@@ -52,28 +54,31 @@ h2 {
   font-size: 25px;
   font-weight: 400;
   font-family: var(--font-default);
-  color: rgb(62, 62, 62, 0.855);
- 
-
+  /* color: rgb(62, 62, 62, 0.855); */
+  color: var(--secondary-color);
 }
 
 .featured,
 h4,
 h1 {
-  font-family: var(--font-heading);
+font-family: var(--font-heading);
+color: var(--secondary-color);
 
 }
 
 .featured {
   font-size: 42px;
+  color: var(--secondary-color);
 }
 
 h4 {
   font-size: 30px;
+  color: var(--secondary-color);
 }
 
 .navbar-brand {
   font-family: var(--font-heading);
+  color: var(--secondary-color);
 }
 
 .navbar {
@@ -84,8 +89,50 @@ h4 {
 .nav-link {
   text-transform: uppercase;
   font-family: var(--font-heading);
+  color: var(--secondary-color);
 
 }
+
+.bounce {
+  display: inline-block;
+  position: relative;
+  -moz-animation: bounce 0.5s infinite linear;
+  -o-animation: bounce 0.5s infinite linear;
+  -webkit-animation: bounce 0.5s infinite linear;
+  animation: bounce 0.5s infinite linear;
+}
+
+@-webkit-keyframes bounce {
+    0% { top: 0; }
+    50% { top: -0.2em; }
+    70% { top: -0.3em; }
+    100% { top: 0; }
+}
+@-moz-keyframes bounce {
+    0% { top: 0; }
+    50% { top: -0.2em; }
+    70% { top: -0.3em; }
+    100% { top: 0; }
+}
+@-o-keyframes bounce {
+    0% { top: 0; }
+    50% { top: -0.2em; }
+    70% { top: -0.3em; }
+    100% { top: 0; }
+}
+@-ms-keyframes bounce {
+    0% { top: 0; }
+    50% { top: -0.2em; }
+    70% { top: -0.3em; }
+    100% { top: 0; }
+}
+@keyframes bounce {
+  0% {top: 0;}
+  50% {top: -0.2em; }
+  70% { top: -0.3em; }
+  100% { top: 0; }
+}
+
 
 .img-wrapper {
   margin-top: -150px;
@@ -107,7 +154,7 @@ h4 {
   border-radius: 10px;
   background: var(--primary-color);
   text-decoration: none;
-  color: #fff;
+  color: #fff; 
   border: 1px solid var(--primary-color);
   text-transform: capitalize;
   margin-bottom: 100px;
@@ -124,10 +171,10 @@ h4 {
   font-family: var(--font-heading);
   padding: 12px 22px;
   border-radius: 10px;
-  background: #fff;
+  background: var(--secondary-color);
   text-decoration: none;
-  color: var(--primary-color);
-  border: 1px solid var(--primary-color);
+  color: #fff;
+  border: 1px solid var(--secondary-color);
   text-transform: capitalize;
   margin-bottom: 100px;
   transition: all 150ms ease-in-out;
@@ -166,20 +213,22 @@ h4 {
 }
 
 .down-icon:hover {
-  color: rgb(62, 62, 62);
+  color: rgba(62, 62, 62, 0.471);
 }
+
 
 
 .project-paragraph {
   line-height: 2;
   font-size: 18px;
-  color: rgba(62, 62, 62, 0.855);
+  color: var(--paragraph-color);
   text-align: center;
 
 }
 
 .h1-supplement-page {
   font-size: 45px;
+  color: var(--secondary-color);
 }
 
 .about-kendra-img {
@@ -196,7 +245,7 @@ h4 {
 .section-paragraphs {
   line-height: 1.75;
   font-size: 18px;
-  color: rgba(62, 62, 62, 0.855);
+  color: var(--paragraph-color);
   text-align: left;
   padding: 20px;
 
@@ -210,7 +259,7 @@ h4 {
 
 
 .about-intro {
-  color: #000 !important;
+  color: var(--secondary-color) !important;
 }
 
 
@@ -227,10 +276,10 @@ h4 {
 
 .colored-text {
   color: var(--primary-color);
-  font-size: 18px;
 }
 
 footer {
+  color: var(--secondary-color);
   background: var(--background-color);
   padding-top: 50px;
 }
@@ -239,8 +288,6 @@ footer {
   padding-bottom: 30px;
   display: flex;
   justify-content: center;
-
-
 }
 
 footer ul {
@@ -332,8 +379,8 @@ footer p {
 @media (max-width: 1197px) {
 
   .intro h2 {
-margin-right: 40px;
-margin-left: 40px;
+    margin-right: 40px;
+    margin-left: 40px;
   }
 
   .git-link {
