--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -256,6 +256,10 @@ h4 {
   background: var(--background-color);
 }
 
+.contact-box li {
+  list-style-position: inside;
+}
+
 .contact-paragraph {
   line-height: 1.4;
   text-align: left;
@@ -306,7 +310,7 @@ footer ul {
 
 footer li {
   display: flex;
-  text-decoration: none;
+  list-style-type: none;
   width: 60px;
   height: 30px;
   align-items: center;
