adjusted padding on intro homepage for mobile devices

--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -594,6 +594,12 @@ footer p {
 }
 
 @media (max-width: 500px) {
+
+  div.intro {
+
+    padding: 190px 15px 100px 15px;
+  
+  }
   h1 {
     font-size: 48px;
     line-height: 1.2;
